--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "vue-crazy-calendar",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.1.1",
+  "main": "dist/vue-crazy-calendar.umd.min.js",
+  "author": "crazyHope",
+  "keyword": "vue-crazy-calendar",
+  "private": false,
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/crazy-hope/vue-crazy-calendar"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib packages/index.js"
   },
   "dependencies": {
     "core-js": "^3.6.4",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-crazy-calendar": "^0.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
